# Git-IPFS-Remote-Bridge

./: .gitignore  LICENSE  README.md  config.sample  git-ipfs  git-ipfs-remote.conf  git-remote-ipfs  pyproject.toml
debian/: changelog  control  copyright  install  lintian-overrides  manpages  rules
debian/source/: lintian-overrides  options
doc/man/: manpage.md
git_ipfs_remote_bridge/: git_ipfs_wrapper.py
